--- a/css/tooplate-gotto-job.css
+++ b/css/tooplate-gotto-job.css
@@ -1358,6 +1358,21 @@ nav[aria-label="breadcrumb"] {
 
 }
 
+@media only screen and (max-width: 600px) {
+  .job-thumb-card.job-thumb {
+    position: relative;
+    border-radius: var(--border-radius-small);
+    background-color: var(--secondary-color);
+    height: 340px;
+    width: 380px;
+    margin-bottom: 25px;
+    padding: 25px;
+    transition: all 0.5s ease;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+}
 
 /*---------------------------------------
   CTA               
